# zembra-cli

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
docs/: PROGRESS.md  cli-design.md
docs/bugfix/: bfx001-unicode-backspace.md
docs/design-docs/cli/: rc001-cli-add-command.md  rc002-zembra-env-config.md  rc003-note-id-prefix-resolution.md  rc004-add-role-option.md  rc005-interactive-run.md  rc006-init-command.md  rc007-list-fields-tags.md  rc008-slash-command-help.md  rc009-http-mode-client.md  rc010-random-notes.md  rc011-cli-cascading-config.md  rc012-http-first-fallback.md  rc013-workspace-commands.md  rc014-run-context-panel.md
docs/design-docs/database/: r001-database-infrastructure.md  r002-crud-repository.md  rb001-database-infrastructure.md  rb002-crud-repository.md  rb003-schema-020-upgrade.md  rb004-latest-schema-workspace-support.md
docs/design-docs/mcp/: rm001-local-mcp-server.md
docs/request-clarify/: index.md
docs/request-clarify/cli/: rc001-cli-add-command.md  rc002-zembra-env-config.md  rc003-note-id-prefix-resolution.md  rc004-add-role-option.md  rc005-interactive-run.md  rc006-init-command.md  rc007-list-fields-tags.md  rc008-slash-command-help.md  rc009-http-mode-client.md  rc010-random-notes.md  rc011-cli-cascading-config.md  rc012-http-first-fallback.md  (+2 more)
src/zembra_cli/: __init__.py  cli.py  config.py  db.py  http_client.py  interactive.py  mcp_server.py  models.py
tests/: test_cli.py  test_config.py  test_db.py  test_http_client.py  test_interactive.py  test_mcp_server.py  test_models.py  test_repository.py
(+36 files in other folders)
