[project]
name = "zembra-cli"
version = "0.1.0"
description = "A command-line note application with room for an elegant TUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0.52",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
zembra-cli = "zembra_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
